# helm-charts

./: README.md  aqua.yaml  index.yaml  pyproject.toml  renovate.json
.github/workflows/: lint.yaml  release.yaml
charts/redash-searcher/: Chart.yaml  README.md  values.yaml
charts/redash-searcher/templates/: NOTES.txt  _helpers.tpl  secrets.yaml
charts/redash-searcher/templates/sync/: deployment.yaml  serviceaccount.yaml
charts/redash-searcher/templates/tests/: test-connection.yaml
charts/redash-searcher/templates/web/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
