[tool.poetry]
name = "helm-charts-dev-tools"
version = "0.1.0"
description = ""
authors = ["Hironori Yamamoto <mr.nikoru918@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
yamllint = "=1.35.1"
yamale = "=4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
