[tool.poetry]
name = "helm-charts-dev-tools"
version = "0.1.0"
description = ""
authors = ["Hironori Yamamoto <mr.nikoru918@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
yamllint = "=1.29.0"
yamale = "=6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
